# DecompUtil

./: CMakeLists.txt  Doxyfile  README.md  package.xml
docs/: annotated.html  classEllipseDecomp-members.html  classEllipseDecomp.html  classEllipsoidDecomp-members.html  classEllipsoidDecomp.html  classIterativeDecomp-members.html  classIterativeDecomp.html  classLineSegment-members.html  classLineSegment.html  classSeedDecomp-members.html  classSeedDecomp.html  classes.html  data__type_8h.html  data__type_8h_source.html  data__utils_8h_source.html  dir_75993fee8576b97e3d9a8476c1772d17.html  ellipse__decomp_8h.html  ellipse__decomp_8h_source.html  ellipsoid_8h_source.html  ellipsoid__decomp_8h_source.html  ellipsoid__utils_8h_source.html  files.html  formula.repository  functions.html  functions_func.html  geometric__utils_8h.html  geometric__utils_8h_source.html  geometry__utils_8h_source.html  globals.html  globals_func.html  globals_type.html  hierarchy.html  index.html  iterative__decomp_8h_source.html  line__segment_8h.html  line__segment_8h_source.html  max__ellipsoid_8hpp_source.html  menudata.js  polyhedron_8h_source.html  seed__decomp_8h_source.html  (+6 more)
docs/search/: all_2.js  all_3.js  all_6.js  all_a.js  all_b.js  all_c.js  all_e.js  functions_1.js  functions_2.js  functions_3.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js
include/decomp_geometry/: ellipsoid.h  geometric_utils.h  polyhedron.h
include/decomp_util/: .iterative_decomp.h.swp  data_type.h  data_utils.h  ellipse_decomp.h  ellipsoid.h  ellipsoid_decomp.h  ellipsoid_utils.h  geometric_utils.h  geometry_utils.h  iterative_decomp.h  line_segment.h  polyhedron.h  seed_decomp.h
include/decomp_utils/: data_type.h  ellipse_decomp.h  ellipsoid_utils.h  geometry_utils.h  iterative_decomp.h  line_segment.h
src/: ellipse_decomp.cpp  ellipsoid_utils.cpp  geometry_utils.cpp  iterative_decomp.cpp  line_segment.cpp  seed_decomp.cpp
test/: test_line_segment.cpp  test_seed_decomp.cpp
