<?xml version="1.0"?>
<package format="2">
  <name>decomp_utils</name>
  <version>0.0.0</version>
  <description>The decomp_utils package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sikang@todo.todo">sikang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <depend>roscpp</depend>
  <depend>map_generator</depend>
  <depend>basic_type</depend>

  <export>
    <cpp cflags="-I${prefix}/include"
      lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib"/>
  </export>

</package>
